--- a/Benedicta/css/style.css
+++ b/Benedicta/css/style.css
@@ -139,6 +139,9 @@ header .col-12 h4{
     position: relative;
     z-index: 2;
 }
+.navbar{
+    height: 60px;
+}
 header .col-12 h1 {
     font-size: 75px;
     color: white;
@@ -350,6 +353,58 @@ display: inherit;
     margin-top: 100px;
     font-size: 45px;
 }
+#return-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.7);
+    width: 50px;
+    height: 50px;
+    display: block;
+    text-decoration: none;
+    -webkit-border-radius: 35px;
+    -moz-border-radius: 35px;
+    border-radius: 35px;
+    display: none;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+#return-to-top i {
+    color: #fff;
+    margin: 0;
+    position: relative;
+     right: 19px;
+    top: 13px;
+    font-size: 19px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+.color-change{
+    background-color: black !important;
+    position: fixed;
+    width: 100%;
+    z-index: 3;
+    top:0;
+}
+#return-to-top:hover {
+    background: rgba(0, 0, 0, 0.9);
+}
+#return-to-top:hover i {
+    color: #fff !important;
+    top: 5px;
+}
+.icons_social a:nth-child(2){
+    margin-right: 30px;
+}
+
+/* Extra Things */
 #About .col-lg-12 hr{
     background: red;
     width: 50px;
@@ -789,3 +844,72 @@ margin-top: 5px;
 }
 /* SEC3 ENDS */
 /* CONTACT PAGE ENDS */
+
+
+/*CARD1 PAGE STARTS */
+/* CARD1 SECTION STARTS */
+#Card1Head  .col-lg-12 h1{
+color: black;
+font-family: Open Sans;
+font-size: 50px;
+font-weight: bold;
+margin-top: 30px;
+}
+#Card1Head  .col-lg-12 .text-muted{
+    font-size: 17px;
+}
+#Card1Head  .col-lg-12 img{
+    width:80%;
+    margin-top: 25px;
+}
+/* CARD1 SECTION ENDS */
+
+/* CONTENT SECTION STARTS */
+#Content .col-lg-12 h3{
+    font-size: 40px;
+    font-weight: bold;
+    font-family: Open Sans;
+    color: black;
+    margin-top: 25px; 
+}
+#Content .col-lg-12 p{
+    color: black;
+    font-family: Open Sans;
+    font-size: 17px;
+    margin-bottom: 50px;
+}
+/* CONTENT SECTION ENDS */
+
+/* AUTHOR SECTION STARTS */
+#Author{
+    background-color: rgba(34, 34, 34, 0.04);
+}
+#Author .col-lg-12 img{
+    margin-top: 30px;
+}
+#Author .col-lg-12 h3{
+    font-size: 40px;
+    font-family: Open Sans;
+    color: black;
+    margin-top: 25px; 
+    margin-bottom: 20px;
+}
+#Author .col-lg-12 p{
+    color: black;
+    font-family: Open Sans;
+    font-size: 17px;
+    margin-bottom: 40px;
+}
+/* AUTHOR SECTION ENDS */
+
+/* RELATED POSTS SECTION STARTS */
+#RelatedPosts .col-lg-4 .card{
+    margin-top: 70px;
+    margin-bottom: 70px;
+}
+#RelatedPosts .col-lg-4 .card p{
+    color: black;
+}
+/* RELATED POSTS SECTION ENDS */
+
+/* CARD1 PAGE ENDS */
